# agent-playground

./: CLAUDE.md  deno.json  notebook.ipynb  to-do.txt
.claude/: settings.json
.claude/agents/: interview-post-processor.md  question-generator.md  shadcn-ui-designer.md  user-interview-facilitator.md.old
.claude/commands/: prompt-helper.md  user-interview-assistant.md
api/: CLAUDE.md  deno.json
api/.claude/agents/: bdd-test-writer.md
api/src/: main.ts  research.ts  researcher.ts
api/src/research/: config.ts  errors.ts  handler.test.ts  handler.ts  index.ts  prompts.test.ts  prompts.ts  schema.test.ts  schema.ts  service.test.ts  service.ts  types.ts
back-end/: .env.example  .gitignore  POSTMAN_GUIDE.md  README.md  README_API.md  main.py  pyproject.toml  test_client.html  test_client.py
back-end-ts/: .gitignore  package.json  pnpm-lock.yaml
back-end-ts-mastra/: package.json
back-end-ts-mastra/src/mastra/: index.ts
back-end/agents/: root_agent.py
back-end/notebooks/: notebook.ipynb
back-end/scripts/: quick_demo.py
back-end/src/: main.py
back-end/src/agents/: agent.py
back-end/src/agents/fireside_chat_assistant/tmp/fireside_chat_assistant/: root_agent.yaml
back-end/src/agents/researcher/tmp/researcher/: root_agent.yaml
back-end/src/models/: __init__.py  dtos.py
back-end/src/routes/: agent.py
back-end/src/services/: __init__.py  agent_service.py
front-end/: .cta.json  .gitignore  CLAUDE.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
front-end/src/: CLAUDE.md  styles.css
front-end/src/components/: FiresideChatForm.tsx  Header.tsx  PreparationNotesDisplay.tsx  form-panel.tsx  notes.tsx  podcast-form.tsx  results-display.tsx
front-end/src/lib/: api-client.ts  api-types.ts  use-streaming.ts  utils.ts
knowledge-bank/: app-features.md  pr-faq.md
legacy-back-end/: POSTMAN_GUIDE.md  output.md  test_client.html  test_client.py
legacy-back-end/notebooks/: requirements.txt
legacy-back-end/scripts/: dev.py  quick_demo.py
legacy-back-end/src/: __init__.py
(+21 files in other folders)
