[project]
name = "back-end"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.121.3",
    "google-adk>=1.18.0",
    "mypy>=1.18.2",
    "ruff>=0.14.5",
    "uvicorn>=0.38.0",
]

[project.scripts]
dev = "scripts.dev:main"
demo = "scripts.quick_demo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "scripts"]

[tool.uv]
package = true
