[project]
name = "back-end"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.121.3",
    "google-adk>=1.18.0",
    "google-api-python-client>=2.0.0",
    "ruff>=0.14.5",
    "uvicorn>=0.38.0",
]

[project.scripts]
dev = "scripts.dev:main"
demo = "scripts.quick_demo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "scripts"]

[tool.uv]
package = true

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.13"
include = ["src", "scripts"]
reportMissingTypeStubs = false
reportUnknownParameterType = true
reportUnknownArgumentType = true
reportUnknownMemberType = true
reportUnknownVariableType = true

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "ruff>=0.14.5",
]
